# vulkan-engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  dependencies.cmake
application/: CMakeLists.txt
application/res/shaders/: basic.frag  basic.vert.spv  compile.bat  compile.sh
application/src/: FileReader.h  Main.cpp
bak-github/workflows/: unit-tests.yml
benchmark-suite/: CMakeLists.txt
benchmark-suite/src/: SampleBenchmark.cpp
docs/: DocumentationGuideline.md
scripts/: genNoStrict.bat  genStrict.bat
test-suite/: CMakeLists.txt
test-suite/src/: SampleTest.cpp
